// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a starred, selected chip for a cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <div
      class="mock-ui-Chip"
      isselected="yes"
      starred="yes"
    >
      <span
        class="labelWithAdornment"
      >
        Rainbow Dash
      </span>
      <svg
        class="adornment selected"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 7v1h-1.5v6h10v-6h-1.5v-1h1.5c.5522847 0 1 .44771525 1 1v6c0 .5522847-.4477153 1-1 1h-10c-.55228475 0-1-.4477153-1-1v-6c0-.55228475.44771525-1 1-1zm5 3v1h-3v-1zm2.1130214-9.31661889.7739572.63323779-4.84985989 5.92760659-3.3906721-3.3906721.70710678-.70710678 2.60944661 2.60955339z"
          fill="inherit"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </a>
</div>
`;

exports[`renders a starred, selected chip for non-cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <div
      class="mock-ui-Chip"
      isselected="yes"
      starred="yes"
    >
      <span>
        Rainbow Dash
      </span>
    </div>
  </a>
</div>
`;

exports[`renders a starred, unselected chip for a cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <div
      class="mock-ui-Chip"
      isselected="no"
      starred="yes"
    >
      <span
        class="labelWithAdornment"
      >
        Rainbow Dash
      </span>
      <svg
        class="adornment"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 7v1h-1.5v6h10v-6h-1.5v-1h1.5c.5522847 0 1 .44771525 1 1v6c0 .5522847-.4477153 1-1 1h-10c-.55228475 0-1-.4477153-1-1v-6c0-.55228475.44771525-1 1-1zm5 3v1h-3v-1zm2.1130214-9.31661889.7739572.63323779-4.84985989 5.92760659-3.3906721-3.3906721.70710678-.70710678 2.60944661 2.60955339z"
          fill="inherit"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </a>
</div>
`;

exports[`renders a starred, unselected chip for a non-cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <div
      class="mock-ui-Chip"
      isselected="no"
      starred="yes"
    >
      <span>
        Rainbow Dash
      </span>
    </div>
  </a>
</div>
`;

exports[`renders an unstarred, unselected chip for a non-cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <div
      class="mock-ui-Chip"
      isselected="no"
      starred="no"
    >
      <span>
        Rainbow Dash
      </span>
    </div>
  </a>
</div>
`;

exports[`renders an unstarred, unselected chip for cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <div
      class="mock-ui-Chip"
      isselected="no"
      starred="no"
    >
      <span
        class="labelWithAdornment"
      >
        Rainbow Dash
      </span>
      <svg
        class="adornment"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 7v1h-1.5v6h10v-6h-1.5v-1h1.5c.5522847 0 1 .44771525 1 1v6c0 .5522847-.4477153 1-1 1h-10c-.55228475 0-1-.4477153-1-1v-6c0-.55228475.44771525-1 1-1zm5 3v1h-3v-1zm2.1130214-9.31661889.7739572.63323779-4.84985989 5.92760659-3.3906721-3.3906721.70710678-.70710678 2.60944661 2.60955339z"
          fill="inherit"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </a>
</div>
`;
